feat(api_hub): conectar refund sandbox financeiro
